--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "devDependencies": {
     "grunt": "~0.4.2",
     "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-coffee": "~0.8.2",
+    "grunt-contrib-coffee": "^0.11.1",
     "grunt-contrib-compass": "^0.9.0",
     "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-imagemin": "^0.7.1",
