--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-imagemin": "^0.7.1",
     "grunt-contrib-uglify": "~0.3.1",
-    "grunt-contrib-watch": "~0.5.3"
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-serve": "^0.1.6"
   }
 }
